@@ -8,6 +8,7 @@ Dectorio=Adds decorative elements to beautify your factory. Currently includes c
 dectorio-signals=Enable Signals
 dectorio-walls=Enable Walls and Gates
 dectorio-landscaping=Enable Landscaping
+dectorio-waterfill=Enable Waterfill
 dectorio-flooring=Enable Floorings
 dectorio-gravel=Enable Gravel
 dectorio-painted-concrete=Enable Painted Concrete
@@ -24,7 +25,8 @@ dectorio-walls-stack-size=Wall items stack size
 [mod-setting-description]
 dectorio-signals=Enables additional signals for use in lamps or the circuit network
 dectorio-walls=Enables additional wall and gate types
-dectorio-landscaping=Enables the ability to craft sand, dirt, grass, red desert and water
+dectorio-landscaping=Enables the ability to craft sand, dirt, grass and desert tiles
+dectorio-waterfill=Enables the ability to craft water for making or expanding lakes
 dectorio-flooring=Enables the ability to craft flooring types including wooden floorboards
 dectorio-gravel=Enables the ability for raw ore materials to be placed on the ground as gravel
 dectorio-painted-concrete=Enables painted concrete styles that replace the base Hazard concrete
